  * debian/copyright:
    + Remove obsolete copyright of findcdroms.c (no more included upstream
      since 20090926)
    + Refer to /usr/share/common-licenses/GPL-2 instead of the symbolic
      link at /usr/share/common-licenses/GPL
    + Update copyright years and my e-mail address
    + Reword the section about examples
  * Bump Standards-Version to 3.9.2 (no changes)

 -- Axel Beckert <abe@debian.org>  Tue, 16 Aug 2011 22:50:36 +0200

dphys-config (20100216-1) unstable; urgency=low

  * New upstream release
    - Works even with LANG not set to C or en_*
    - New debug option LEAVE_WGET_OUTPUT
    - Fixes some misspellings reported by Lintian 2.3.x
    - Other not so common spellings won't be fixed by upstream, so let's
      keep lintian quiet about them by using lintian overrides as
      suggested on the lintian mailing list.
  * Fix Lintian warning debhelper-but-no-misc-depends by adding
    ${misc:Depends} to the dependencies.
  * Bumped Standards-Version to 3.8.4 (no changes)
  * Changed the maintainer e-mail address to my debian.org address.
  * [debian/init.d] Add dependency to $remote_fs due to usage of /usr.

 -- Axel Beckert <abe@debian.org>  Tue, 16 Feb 2010 21:46:39 +0100

dphys-config (20090926-1) unstable; urgency=low

  * New upstream release
    - Now works with every web server (e.g. also ACME micro_httpd)
    - Now handles blanks and backslashes correctly while preprocessing
      and reading its own configuration file. (Closes: #510910)
    - Supports file:/// URLs for configuration file locations
    - Supports configurable temporary directory (defaults to /var/tmp)
    - Supports mktemp by default if available (also obsoletes mktemp fix
      from last NMU)
    - New option -c to override hostname in chrooted environments
    - Removed bashism fixes from last NMU since they have been intergrated
      by upstream even though Debian doesn't require them anymore since
      policy 3.8.1.