@@ -4,8 +4,9 @@
 
 DESTDIR=$(CURDIR)/debian/dphys-config
 
-build: build-stamp
-
+build: build-arch build-indep
+build-arch: build-stamp
+build-indep: build-stamp
 build-stamp:
 	dh_testdir
 	$(MAKE)
