@@ -10,6 +10,8 @@ dphys-config (20100216-2) UNRELEASED; urgency=low
     + Update copyright years and my e-mail address
     + Reword the section about examples
   * Bump Standards-Version to 3.9.2 (no changes)
+  * Fix some lintian warnings:
+    + debian-rules-missing-recommended-target
 
  -- Axel Beckert <abe@debian.org>  Tue, 16 Aug 2011 22:50:36 +0200
 
